# rag-app-react

./: README.md  pyproject.toml
backend/: .gitignore  api.py
backend/tmp/lancedb/recipes.lance/_transactions/: 0-ec2aec13-33cd-4e99-8d3d-8281c3a3a410.txn  1-39ce8952-f0de-420e-98ce-6ce566ef4db2.txn
backend/tmp/lancedb/recipes.lance/_versions/: 1.manifest  2.manifest
backend/tmp/lancedb/recipes.lance/data/: c4ed720c-24cb-4a7a-aa7c-85d068780c33.lance
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/Chat/: ChatInterface.tsx
frontend/src/services/: api.ts
